# fast-tort-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
fast_tort_cli/: __init__.py  cli.py
fast_tortoise_cli/: cli.py
tests/: test_bump.py  test_check.py  test_click.py  test_fast_test.py  test_functions.py  test_import.py  test_lint.py  test_sync.py  test_tag.py  test_upgrade.py  test_utils.py  test_version.py  utils.py
