[tool.poetry]
name = "fast-tort-cli"
version = "0.1.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_tort_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
isort = { version = "^5.12.0", optional = true }
black = { version = "^23.7.0", optional = true }
ruff = { version = "^0.0.287", optional = true }
typer = { version = "^0.9.0", extras = ["all"], optional = true }
mypy = { version = "^1.5.1", optional = true }
anyio = { version = "^4.0.0", optional = true }
bumpversion = { version = "^0.6.0", optional = true }

[tool.poetry.extras]
all = ["isort", "black", "ruff", "typer", "mypy", "bumpversion"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
isort = "^5.12.0"
black = "^23.7.0"
ruff = "^0.0.287"
typer = { version = "^0.9.0", extras = ["all"] }
mypy = "^1.5.1"
anyio = "^4.0.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast = "fast_tort_cli:cli"
