[tool.poetry]
name = "fast-tort-cli"
version = "0.3.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_tort_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = ">=7.1.1"
isort = {version = "^5.12.0", optional = true}
black = {version = "^23.9.1", optional = true}
ruff = {version = "^0.0.289", optional = true}
typer = {extras = ["all"], version = "^0.9.0", optional = true}
mypy = {version = "^1.5.1", optional = true}
anyio = {version = ">=3.7.1", optional = true}
bumpversion = {version = "^0.6.0", optional = true}
coverage = {version = "^7.3.1", optional = true}
pytest = {version = "^7.4.2", optional = true}

[tool.poetry.extras]
all = ["isort", "black", "ruff", "typer", "mypy", "bumpversion", "pytest", "coverage"]

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
ruff = "*"
mypy = "*"
pytest = "*"
coverage = "*"
bumpversion = "*"
typer = {extras = ["all"], version = "*"}
anyio = ">=3.7.1"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast = "fast_tort_cli:cli"

[tool.mypy]
pretty = true
ignore_missing_imports = true
